QA fixes: remove scaffold-eth branding, stock footer, debug links, update favicon + logo + manifest

--- a/packages/nextjs/public/manifest.json
+++ b/packages/nextjs/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  name: 'Scaffold-ETH 2 DApp',
-  description: 'A DApp built with Scaffold-ETH',
-  iconPath: 'logo.svg'
+  "name": "CLAWD Meme Arena",
+  "description": "The dankest meme contest on Base. Submit memes, vote with $CLAWD, win prizes.",
+  "iconPath": "favicon.png"
 }
