--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -7,13 +7,9 @@
     "check-types": "tsc --noEmit --incremental",
     "dev": "next dev",
     "format": "prettier --write . '!(node_modules|.next|contracts)/**/*'",
-    "ipfs": "NEXT_PUBLIC_IPFS_BUILD=true yarn build && yarn bgipfs upload config init -u https://upload.bgipfs.com && CID=$(yarn bgipfs upload out | grep -o 'CID: [^ ]*' | cut -d' ' -f2) && [ ! -z \"$CID\" ] && echo '🚀 Upload complete! Your site is now available at: https://community.bgipfs.com/ipfs/'$CID || echo '❌ Upload failed'",
     "lint": "next lint",
     "serve": "next start",
-    "start": "next dev",
-    "vercel": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env VERCEL_TELEMETRY_DISABLED=1",
-    "vercel:login": "vercel login",
-    "vercel:yolo": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true --build-env VERCEL_TELEMETRY_DISABLED=1"
+    "start": "next dev"
   },
   "dependencies": {
     "@heroicons/react": "~2.1.5",
@@ -46,7 +42,6 @@
     "@types/react": "~19.0.7",
     "abitype": "1.0.6",
     "autoprefixer": "~10.4.20",
-    "bgipfs": "~0.0.12",
     "eslint": "~9.23.0",
     "eslint-config-next": "~15.2.3",
     "eslint-config-prettier": "~10.1.1",
@@ -55,8 +50,7 @@
     "prettier": "~3.5.3",
     "tailwindcss": "4.1.3",
     "type-fest": "~4.26.1",
-    "typescript": "~5.8.2",
-    "vercel": "~39.1.3"
+    "typescript": "~5.8.2"
   },
   "packageManager": "yarn@3.2.3"
 }
