--- a/packages/nextjs/vercel.json
+++ b/packages/nextjs/vercel.json
@@ -1,3 +1,3 @@
 {
-  "installCommand": "cp ../../yarn.lock . && yarn install"
+  "installCommand": "cp ../../yarn.lock . && YARN_ENABLE_IMMUTABLE_INSTALLS=false yarn install"
 }
